--- a/Emotion_Detection.ipynb
+++ b/Emotion_Detection.ipynb
@@ -44,7 +44,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from keras.layers import Flatten, Dense\n",
+        "from keras.layers import Flatten, Dense, GlobalAveragePooling2D\n",
         "from keras.models import Model\n",
         "from keras.utils.image_utils import img_to_array, load_img\n",
         "from keras.applications.mobilenet import MobileNet, preprocess_input \n",
