--- a/Emotion_Detection.ipynb
+++ b/Emotion_Detection.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,12 +29,12 @@
       },
       "outputs": [],
       "source": [
-        "datapath = r\"E:\\New folder\\FER 2013 dataset\""
+        "datapath = r\"FER 2013 dataset\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "6dcwbXc8Xzww"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "FN3kEpAeZUGj"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
               " 'surprise': 6}"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -153,7 +153,7 @@
         "     rescale = 1./255\n",
         ")\n",
         "\n",
-        "train_data = train_datagen.flow_from_directory(directory= r\"E:\\New folder\\FER 2013 dataset\\train\", \n",
+        "train_data = train_datagen.flow_from_directory(directory= r\"FER 2013 dataset\\train\", \n",
         "                                               target_size=(224,224), \n",
         "                                               batch_size=64,\n",
         "                                  )\n",
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -184,7 +184,7 @@
       "source": [
         "val_datagen = ImageDataGenerator(rescale = 1./255 )\n",
         "\n",
-        "val_data = val_datagen.flow_from_directory(directory= r\"E:\\New folder\\FER 2013 dataset\\test\", \n",
+        "val_data = val_datagen.flow_from_directory(directory= r\"FER 2013 dataset\\test\", \n",
         "                                           target_size=(224,224), \n",
         "                                           batch_size=64,\n",
         "                                  )"
